[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/tiles/florestaTileSet.tres" type="TileSet" id=1]
[ext_resource path="res://scenes/characters/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/Camera.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/characters/Jotaro.tscn" type="PackedScene" id=4]
[ext_resource path="res://scripts/Levels/Level.gd" type="Script" id=5]
[ext_resource path="res://assets/images/background/background-floresta.PNG" type="Texture" id=6]
[ext_resource path="res://scenes/enemies/wormSpawner.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/tiles/oneWayTileSet.tres" type="TileSet" id=8]
[ext_resource path="res://assets/tiles/behindWall.tres" type="TileSet" id=9]
[ext_resource path="res://scenes/DialogueSystem.tscn" type="PackedScene" id=10]

[sub_resource type="RectangleShape2D" id=8]

[node name="Level 2" type="Node2D"]
script = ExtResource( 5 )
levelName = "Level2"

[node name="Camera" parent="." instance=ExtResource( 3 )]
position = Vector2( 240, 135 )
limit_top = -270
limit_right = 2000
alvo_path = NodePath("../Characters/Player")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
scroll_limit_begin = Vector2( 0, -270 )
scroll_limit_end = Vector2( 2000, 270 )

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.4, 1 )
motion_mirroring = Vector2( 1079, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 0, -270 )
scale = Vector2( 1, 2 )
texture = ExtResource( 6 )
centered = false

[node name="World" type="Node2D" parent="."]

[node name="BehindWall" type="TileMap" parent="World"]
tile_set = ExtResource( 9 )
cell_size = Vector2( 32, 32 )
collision_layer = 4
collision_mask = 0
format = 1
tile_data = PoolIntArray( 196658, 0, 65539, 196659, 0, 131074, 196660, 0, 131074, 196661, 0, 131074, 196662, 0, 65540, 262194, 0, 65539, 262195, 0, 131074, 262196, 0, 131074, 262197, 0, 131074, 262198, 0, 65540, 327730, 0, 65539, 327731, 0, 131074, 327732, 0, 131074, 327733, 0, 131074, 327734, 0, 65540, 393266, 0, 65539, 393267, 0, 131074, 393268, 0, 131074, 393269, 0, 131074, 393270, 0, 65540, 458802, 0, 65539, 458803, 0, 131074, 458804, 0, 131074, 458805, 0, 131074, 458806, 0, 65540, 524338, 0, 65539, 524339, 0, 131074, 524340, 0, 131074, 524341, 0, 131074, 524342, 0, 65540 )

[node name="OneWay" type="TileMap" parent="World"]
tile_set = ExtResource( 8 )
cell_size = Vector2( 32, 32 )
collision_layer = 2
collision_mask = 0
format = 1
tile_data = PoolIntArray( 131122, 0, 131072, 131123, 0, 1, 131124, 0, 1, 131125, 0, 1, 131126, 0, 131073, 262195, 0, 65537, 262196, 0, 0, 262197, 0, 65536, 393267, 0, 4, 393268, 0, 1, 393269, 0, 65536 )

[node name="Ground" type="TileMap" parent="World"]
tile_set = ExtResource( 1 )
cell_size = Vector2( 32, 32 )
collision_layer = 8
collision_mask = 17
format = 1
tile_data = PoolIntArray( -196585, 0, 4, -196584, 0, 65536, -196581, 0, 4, -196580, 0, 65536, -65537, 0, 131072, -131072, 0, 1, -131071, 0, 1, -131070, 0, 0, -131069, 0, 0, -131068, 0, 1, -131067, 0, 0, -131066, 0, 0, -131065, 0, 0, -131064, 0, 1, -131063, 0, 1, -131062, 0, 0, -131061, 0, 0, -131060, 0, 0, -131059, 0, 1, -131058, 0, 1, -131057, 0, 131073, -131041, 0, 131072, -131040, 0, 1, -131039, 0, 0, -131038, 0, 0, -131037, 0, 0, -131036, 0, 1, -131035, 0, 0, -131034, 0, 0, -131033, 0, 1, -131032, 0, 1, -131031, 0, 0, -131030, 0, 0, -131029, 0, 1, -131028, 0, 131073, -1, 0, 65539, -65536, 0, 196610, -65535, 0, 196610, -65534, 0, 196610, -65533, 0, 196610, -65532, 0, 196610, -65531, 0, 196610, -65530, 0, 196610, -65529, 0, 196610, -65528, 0, 196610, -65527, 0, 196610, -65526, 0, 196610, -65525, 0, 196610, -65524, 0, 196610, -65523, 0, 196610, -65522, 0, 196610, -65521, 0, 65540, -65517, 0, 4, -65516, 0, 65536, -65505, 0, 65539, -65504, 0, 196610, -65503, 0, 196610, -65502, 0, 196610, -65501, 0, 196610, -65500, 0, 196610, -65499, 0, 196610, -65498, 0, 196610, -65497, 0, 196610, -65496, 0, 196610, -65495, 0, 196610, -65494, 0, 196610, -65493, 0, 196610, -65492, 0, 65540, 68, 0, 4, 69, 0, 65536, 65559, 0, 4, 65560, 0, 65536, 131100, 0, 65537, 131101, 0, 65538, 131137, 0, 4, 131138, 0, 65536, 262168, 0, 65537, 262169, 0, 65538, 262206, 0, 4, 262207, 0, 65536, 393231, 0, 131072, 393232, 0, 0, 393233, 0, 0, 393234, 0, 0, 393235, 0, 0, 393236, 0, 0, 393237, 0, 131073, 393275, 0, 4, 393276, 0, 65536, 524287, 0, 131072, 458752, 0, 1, 458753, 0, 1, 458754, 0, 1, 458755, 0, 0, 458756, 0, 0, 458757, 0, 0, 458758, 0, 0, 458759, 0, 1, 458760, 0, 0, 458761, 0, 0, 458762, 0, 0, 458763, 0, 0, 458764, 0, 1, 458765, 0, 1, 458766, 0, 1, 458767, 0, 2, 458768, 0, 131074, 458769, 0, 131074, 458770, 0, 131074, 458771, 0, 131074, 458772, 0, 131074, 458773, 0, 65540, 458788, 0, 4, 458789, 0, 65536, 458792, 0, 4, 458793, 0, 65536, 458796, 0, 4, 458797, 0, 65536, 589823, 0, 65539, 524288, 0, 196610, 524289, 0, 196610, 524290, 0, 196610, 524291, 0, 196610, 524292, 0, 196610, 524293, 0, 196610, 524294, 0, 196610, 524295, 0, 196610, 524296, 0, 196610, 524297, 0, 196610, 524298, 0, 196610, 524299, 0, 196610, 524300, 0, 196610, 524301, 0, 196610, 524302, 0, 196610, 524303, 0, 196610, 524304, 0, 196610, 524305, 0, 196610, 524306, 0, 196610, 524307, 0, 196610, 524308, 0, 196610, 524309, 0, 3, 524310, 0, 0, 524311, 0, 1, 524312, 0, 1, 524313, 0, 0, 524314, 0, 1, 524315, 0, 1, 524316, 0, 0, 524317, 0, 0, 524318, 0, 0, 524319, 0, 0, 524320, 0, 131073, 524336, 0, 131072, 524337, 0, 1, 524338, 0, 1, 524339, 0, 1, 524340, 0, 1, 524341, 0, 1, 524342, 0, 1, 524343, 0, 0, 524344, 0, 131073 )

[node name="Objects" type="Node2D" parent="."]

[node name="Enemies" type="Node2D" parent="."]

[node name="WormSpawner" parent="Enemies" instance=ExtResource( 7 )]
position = Vector2( 80, -64 )

[node name="WormSpawner2" parent="Enemies" instance=ExtResource( 7 )]
position = Vector2( 1360, -64 )

[node name="WormSpawner3" parent="Enemies" instance=ExtResource( 7 )]
position = Vector2( 1720, 64 )

[node name="Characters" type="Node2D" parent="."]

[node name="Jotaro" parent="Characters" instance=ExtResource( 4 )]
position = Vector2( 584, 184 )

[node name="DialogueSystem" parent="Characters/Jotaro" instance=ExtResource( 10 )]
dialogFile = "res://assets/falas/teste.json"

[node name="QuestMark" parent="Characters/Jotaro/DialogueSystem" index="0"]
position = Vector2( 0, -36 )

[node name="Player" parent="Characters" instance=ExtResource( 2 )]
position = Vector2( 200, 208 )

[node name="AreaTriggers" type="Node2D" parent="."]

[node name="StartPoint" type="Area2D" parent="AreaTriggers"]
position = Vector2( 168, 208 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaTriggers/StartPoint"]
shape = SubResource( 8 )

[node name="EndPoint" type="Area2D" parent="AreaTriggers"]
position = Vector2( 168, 208 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaTriggers/EndPoint"]
shape = SubResource( 8 )

[editable path="Characters/Jotaro/DialogueSystem"]
